istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    tls:
      httpsRedirect: true # sends 301 redirect for http requests
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    hosts:
    - "*"
  #   tls:
  #     mode: SIMPLE # enables HTTPS on this port
  #     serverCertificate: /etc/certs/servercert.pem
  #     privateKey: /etc/certs/privatekey.pem
  # - port:
  #     number: 9443
  #     name: https-9443
  #     protocol: HTTPS
  #   hosts:
  #   - "bookinfo-namespace/*.bookinfo.com"
  #   tls:
  #     mode: SIMPLE # enables HTTPS on this port
  #     credentialName: bookinfo-secret # fetches certs from Kubernetes secret
  # - port:
  #     number: 9080
  #     name: http-wildcard
  #     protocol: HTTP
  #   hosts:
  #   - "*"
  # - port:
  #     number: 2379 # to expose internal service via external port 2379
  #     name: mongo
  #     protocol: MONGO
  #   hosts:
  #   - "*"
