istio/virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontendapp-virtual-service
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/frontend-gateway  
  http:
  - name: frontendapp-route
    route:
    - destination:
        host: frontend-service.default.svc.cluster.local
        port:
          number: 80
      #   subset: v1
      # weight: 80 
    # - destination:
    #     host: frontend-service.default.svc.cluster.local
    #     port:
    #       number: 80
    #     subset: v2
    #   weight: 20 

#I am commenting out the canery deployment to keep it simple
